--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "odin",
   "version": "0.1.1",
-  "homepage": "https://ApetMkoyan.github.io/Odin",
+  "homepage": "https://odin.tools",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
